# VitalGen_Pharma

./: .gitignore  README.md  _brand.yml  api.py  app.py  brightbank_eda.py  eda.qmd  eda.quarto_ipynb  eda.quarto_ipynb_1  eda.quarto_ipynb_2  eda.quarto_ipynb_3  main.py  manifest.json  patient_eda.R  posit-README.md  pyproject.toml  requirements.txt  streamlit_app.py
.posit/publish/: Clinical Trial Enrollment Anal-VKMS.toml  VitalGen_Pharma-0DQR.toml
.posit/publish/deployments/: deployment-PHQL.toml  deployment-QSP5.toml
data/: generate_data.py
ml/: model_metadata.json  train_model.py
