[project]
name = "vitalgen-pharmaceuticals"
version = "1.0.0"
description = "Clinical trial enrollment analytics demo with Python ETL (polars), ML, Shiny, Streamlit, and FastAPI"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "fastapi>=0.128.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "quarto>=0.1.0",
    "rsconnect-python>=1.29.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shiny[theme]>=1.5.1",
    "streamlit>=1.53.1",
    "uvicorn>=0.40.0",
]
